--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "verify": "hardhat etherscan-verify --license AGPL-3.0 --force-license --solc-input --network",
     "start-fork": "FORK_ENABLED=true hardhat node --no-reset --no-deploy",
     "find": "hardhat run scripts/find.ts --network",
-    "call": "hardhat run scripts/call.ts --network"
+    "call": "hardhat run scripts/call.ts --network",
+    "getPairsData": "hardhat run scripts/getPairsData.ts --network"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
